--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,6 @@ langchain-ollama==0.2.1
 grandalf==0.8
 beautifulsoup4==4.12.3
 tiktoken==0.8.0
-gpt4all==2.8.2
+lxml==5.3.0
 chromadb==0.5.20
 IPython==8.30.0
