--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,23 @@
 langchain-core==0.3.22
-langgraph==0.2.56
-langchain==0.3.9
-langchain-community==0.3.10
+langchain==0.3.10
+langchain_community==0.3.10
+langchain-cohere==0.3.3
 langchain-ollama==0.2.1
+langchain-nomic==0.1.4
+langchainhub==0.1.21
+#
+langgraph==0.2.56
+#
+scikit-learn==1.5.2
+#
 grandalf==0.8
 beautifulsoup4==4.12.3
+#
+chromadb==0.5.23
 tiktoken==0.8.0
 lxml==5.3.0
-chromadb==0.5.23
+#
 IPython==8.30.0
+python-dotenv==1.0.1
+#
+tavily-python==0.5.0
