plan-and-execute

--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ langgraph==0.2.59
 scikit-learn==1.6.0
 # graphs drawing
 grandalf==0.8
+Pillow==11.0.0
 # scrape information from web pages
 beautifulsoup4==4.12.3
 #
