--- a/hello-langraph-java/pom.xml
+++ b/hello-langraph-java/pom.xml
@@ -12,6 +12,7 @@
         <spring-boot.version>3.3.6</spring-boot.version>
         <langgraph4j.version>1.1.5</langgraph4j.version>
         <langchain4j.version>0.36.2</langchain4j.version>
+        <lombok.version>1.18.36</lombok.version>
     </properties>
 
     <dependencies>
@@ -45,11 +46,6 @@
             <artifactId>langchain4j-web-search-engine-tavily</artifactId>
             <version>${langchain4j.version}</version>
         </dependency>
-        <dependency>
-            <groupId>dev.langchain4j</groupId>
-            <artifactId>langchain4j-embeddings-all-minilm-l6-v2</artifactId>
-            <version>${langchain4j.version}</version>
-        </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.testcontainers/chromadb -->
         <dependency>
@@ -68,8 +64,8 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
             <scope>provided</scope>
-            <version>1.18.36</version>
         </dependency>
 
         <dependency>
@@ -101,6 +97,13 @@
                 <configuration>
                     <encoding>UTF-8</encoding>
                     <release>21</release>
+                    <annotationProcessorPaths>
+                        <path>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok</artifactId>
+                            <version>${lombok.version}</version>
+                        </path>
+                    </annotationProcessorPaths>
                 </configuration>
             </plugin>
             <plugin>
