--- a/hello-langgraph-java/pom.xml
+++ b/hello-langgraph-java/pom.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.feuyeux.ai</groupId>
@@ -16,14 +17,8 @@
     </properties>
 
     <dependencies>
-        <!--== langgraph4j ==-->
-        <!-- https://mvnrepository.com/artifact/org.bsc.langgraph4j/langgraph4j-core-jdk8 -->
-        <dependency>
-            <groupId>org.bsc.langgraph4j</groupId>
-            <artifactId>langgraph4j-core-jdk8</artifactId>
-            <version>${langgraph4j.version}</version>
-        </dependency>
-        <!--== longchain4j ==-->
+        <!--==
+        longchain4j ==-->
         <!-- https://mvnrepository.com/artifact/dev.langchain4j/langchain4j -->
         <dependency>
             <groupId>dev.langchain4j</groupId>
@@ -54,7 +49,8 @@
             <version>1.20.4</version>
         </dependency>
 
-        <!--== springboot ==-->
+        <!--==
+        springboot ==-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -84,6 +80,13 @@
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
             <version>5.10.2</version>
+            <scope>test</scope>
+        </dependency>
+        <!-- Add Mockito for testing -->
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>5.11.0</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
